<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/women"
            android:title="@string/women" >
            <menu>
                <item
                    android:id="@+id/clothes_women"
                    android:icon="@drawable/cart"
                    android:title="@string/clothes"/>
                <item
                    android:id="@+id/accessories_women"
                    android:icon="@drawable/cart"
                    android:title="@string/accessories"
                    />
                <item

                    android:id="@+id/cosmetics_women"
                    android:icon="@drawable/cart"
                    android:title="@string/cosmetics"/>

                <item
                    android:id="@+id/fashion_women"
                    android:icon="@drawable/cart"
                    android:title="@string/fashions"/>


            </menu>

        </item>

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/men"
            android:title="@string/men" >
            <menu>
                <item
                    android:id="@+id/accessories_men"
                    android:icon="@drawable/cart"
                    android:title="@string/accessories"/>
                <item
                    android:id="@+id/glasses_men"
                    android:icon="@drawable/cart"
                    android:title="@string/glasses"/>
                <item
                    android:id="@+id/watches_men"
                    android:icon="@drawable/cart"
                    android:title="@string/watches"/>
                <item
                    android:id="@+id/clothes_men"
                    android:icon="@drawable/cart"
                    android:title="@string/clothes"/>
            </menu>
            </item>
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/kid"
            android:title="@string/kids" />
    </group>

    <item android:title="@string/electronics">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/microwave" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/mobile" />
        </menu>
    </item>

</menu>
