<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="30dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="3dp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:paddingTop="10dp"
        android:textAlignment="center"
        android:src="@drawable/lenovo"/>

     </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Lenovo K5 32 GB, 3GB RAM and Non-Removable Battery"
        android:textColor="#123"
        android:textDirection="firstStrongRtl"
        android:textSize="17sp"
        android:textStyle="bold" />

    <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="30%"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textColor="#ffffff"
        android:background="#ef290b"/>

  </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <TextView
        android:id="@+id/oldprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_price"
        android:textColor="#000000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3000 SAR"
            android:layout_marginLeft="30dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#315b06"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/oldprice"
            android:layout_marginStart="62dp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/buy_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:background="#f1e024"
            android:text="@string/buy_now"
            android:textAlignment="center"
            android:textColor="#080808"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add_to_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="#7ee278"
            android:text="@string/add_to_cart"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </LinearLayout>
  </LinearLayout>
</RelativeLayout>
    </ScrollView>