<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aswaqqnet.it.aswaqqapp.Cart">


    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/product_cart_image"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/logo_one" />

            <TextView
                android:id="@+id/product_cart_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/product_cart_image"
                android:text="LENOVO k5 Note" />

            <TextView
                android:id="@+id/qty_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_cart_name"
                android:layout_toEndOf="@+id/product_cart_image"
                android:text="@string/Qty" />

            <com.hariofspades.incdeclibrary.IncDecCircular
                android:id="@+id/incdec"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_below="@+id/product_cart_name"
                android:layout_toEndOf="@+id/qty_cart"
                app:leftButtonColorTint="#dfdfdf"
                app:leftDrawable="@mipmap/remove"
                app:leftDrawableTint="#000000"
                app:rightButtonColorTinit="#dfdfdf"
                app:rightDrawable="@mipmap/add"
                app:rightDrawableTint="#000000"
                app:textColor="#123"
                app:textSize="20" />

            <TextView
                android:id="@+id/item_count"
                android:layout_width="15dp"
                android:layout_height="30dp"
                android:layout_below="@+id/product_cart_name"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/incdec"
                android:paddingTop="10dp"
                android:text="3"
                android:textColor="#080808"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_count"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/price" />

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_count"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/price"
                android:text="3200" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="340dp"
        android:layout_alignParentBottom="true"
        android:foregroundGravity="bottom"
        app:cardCornerRadius="9dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_gravity="bottom|center"
            android:background="#2f85da"
            android:id="@+id/buy_cart"
            android:text="@string/buy"

            android:textColor="@color/white" />
    </android.support.v7.widget.CardView>
</RelativeLayout>
